Update cart, unit change

--- a/GreenStore/GreenStore.csproj
+++ b/GreenStore/GreenStore.csproj
@@ -247,6 +247,10 @@
     <Compile Include="Migrations\202107231536154_Update-Frame.Designer.cs">
       <DependentUpon>202107231536154_Update-Frame.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107231724161_UpdateModel2.cs" />
+    <Compile Include="Migrations\202107231724161_UpdateModel2.Designer.cs">
+      <DependentUpon>202107231724161_UpdateModel2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AdminViewModel.cs" />
@@ -437,6 +441,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107231536154_Update-Frame.resx">
       <DependentUpon>202107231536154_Update-Frame.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107231724161_UpdateModel2.resx">
+      <DependentUpon>202107231724161_UpdateModel2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
